# ARK-Survival-Ascended-Server-Manager

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  deny.toml  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: asa-mainland-cidrs.txt
src-tauri/src/: acme_certificate.rs  acme_client.rs  acme_crypto.rs  acme_dns.rs  acme_key_material.rs  acme_persistence.rs  app_logs.rs  app_persistence.rs  app_state.rs  ark_config.rs  ark_config_game_user_settings.rs  ark_config_ini.rs  ark_config_ini_merge.rs  ark_config_launch.rs  ark_config_mods.rs  ark_config_values.rs  asa_config_defaults.rs  asa_config_metadata.rs  asa_server_process.rs  backup.rs  command_events.rs  commands.rs  commands_web.rs  curseforge.rs  host_directory_browser.rs  import_export.rs  instance_config_commands.rs  instance_config_import.rs  instance_config_import_ini.rs  instance_config_import_mapping.rs  instance_config_import_paths.rs  instance_config_import_readers.rs  instance_data_commands.rs  instance_file_manager.rs  instance_query_commands.rs  instance_runtime_config.rs  lib.rs  main.rs  models.rs  path_security.rs  (+41 more)
src-tauri/src/acme_certificate/: tests.rs
src-tauri/src/acme_client/: account.rs  authorization.rs  http.rs  order.rs  types.rs
src-tauri/src/app_persistence/: settings_config.rs  state_file.rs
src-tauri/src/app_state/: instances.rs  logs.rs  paths.rs  player_presence.rs  runtime_tasks.rs  tests.rs  time.rs
src-tauri/src/ark_config/: tests.rs
src-tauri/src/ark_config_game_user_settings/: map_specific.rs  server_balance.rs  server_basics.rs  session_settings.rs
src-tauri/src/asa_config_defaults/: engine_ini_ip_net_driver.rs  game_ini_shooter_game_mode.rs  game_user_settings_server_settings.rs  launch_argument.rs  manager_only.rs
src-tauri/src/backup/: archive.rs  create.rs  listing.rs  naming.rs  restore.rs  tests.rs
src-tauri/src/commands/: install_update.rs  open_paths.rs  tests.rs
src-tauri/src/commands_web/: config.rs  data.rs  file_manager.rs  instances.rs  logs.rs  open_paths.rs  settings.rs  support.rs
src-tauri/src/instance_config_import/: preview.rs  tests.rs
src-tauri/src/instance_config_import_paths/: config_dir.rs  install_path.rs  path_text.rs  saved_maps.rs  tests.rs
src-tauri/src/instance_config_import_readers/: engine_ini.rs  game_ini.rs  game_user_settings.rs
src-tauri/src/instance_runtime_config/: metadata.rs  mods.rs  paths.rs  payload_config.rs  ports.rs  validation.rs
src-tauri/src/models/: instance.rs  logs.rs  operations.rs  settings.rs
src-tauri/src/reverse_proxy/: config_runtime.rs  security_gateway.lua  tests.rs
src-tauri/src/reverse_proxy_ip_whitelist/: cidr.rs  normalization.rs  render.rs  tests.rs  validation.rs
src-tauri/src/server_lifecycle_monitor/: config.rs  (+3 more)
(+116 files in other folders)
