[package]
name = "asa-server-manager"
version = "0.1.0"
description = "ARK: Survival Ascended server manager prototype"
authors = ["ASA Server Manager"]
edition = "2024"

[lib]
name = "asa_server_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.4", features = [] }
tauri-plugin-dialog = "=2.6.0"
